# pei-parks-fwi

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  IMPLEMENTATION_PLAN.md  README.md  analysis.ipynb  analysis_executed.ipynb  build_notebook.py  cleaning.py  codemap.md  pyproject.toml  pyrightconfig.json  redundancy_analysis.ipynb  requirements.txt
.cartography/: cartography.json  codemap-src_pea_met_network.md  codemap-src_pea_met_network_adapters.md
dashboard/: index.html
docs/: MISS-HOOVER-PATTERN.md  artifact-validation.json  cleaning-config.json  data-manifest.json  data-sources.md  fwi-forecast-plan.md  gate-inject.md  licor-ingestion-plan.md  lineage.jsonl  lisa-prompt.md  loop-log.jsonl  loop-prompt.md  martin-lint.json  martin-prompt.md  martin-rules.2026.03.json  orchestrator-prompt.md  pre-flight.json  ralph-prompt.md  ralph-state.json  tess-prompt.md  test-assessment.json  test-inventory.json  unralph-prompt.md  validation.json  working-agreement.md
notebooks/: 01_explore.ipynb
scripts/: backfill_historical_fwi.py  build_dashboard.py  licor_cache.py  licor_to_csv.py  martin-lint.py  pre_flight.py  record_verdict.py  run_orchestrator.py  sync_state.py  validate_artifacts.py  validate_rh_imputation_historical.py  validate_stanhope.py
specs/: 01-pipeline-refactor.md  02-schema-coverage.md  03-imputation-audit.md  03-pipeline-integration.md  04-stanhope-validation.md  05-qa-qc-report.md  05-redundancy.md  06-determinism.md  06-uncertainty.md  07-data-refresh.md  07-e2e-validation.md  07-licor-integration.md  07-loop-guardrails.md  08-e2e-validation.md  (+3 more)
(+580 files in other folders)
