[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pei-parks-fwi"
version = "0.1.0"
description = "DATA-3210 PEI meteorological network optimization project"
requires-python = ">=3.11"
dependencies = [
    # Core data
    "pandas>=3.0",
    "numpy>=2.4",
    "scipy>=1.17",
    "scikit-learn>=1.8",
    # Data formats
    "openpyxl>=3.1",
    "defusedxml>=0.7",
    "jsonschema>=4.26",
    "PyYAML>=6.0",
    # Visualization
    "matplotlib>=3.10",
    "seaborn>=0.13",
    # HTTP / caching
    "requests>=2.32",
    "httpx>=0.28",
    # Quality
    "pytest>=9.0",
    "ruff>=0.15",
    # Utilities
    "arrow>=1.4",
    "Jinja2>=3.1",
    "lark>=1.3",
    "prometheus_client>=0.24",
    "psutil>=7.2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 80
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["E402"]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "W",
  "C90",
]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q -m 'not e2e'"
testpaths = ["tests"]
timeout = 300
markers = [
    "e2e: end-to-end pipeline tests",
    "slow: tests that take > 30s",
    "integration: tests requiring external services",
]
